--- a/index.html
+++ b/index.html
@@ -10,18 +10,31 @@
 
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <main class="container">
+    <img src="images/image-victor.jpg" alt="Victor profile image">
+    <div class="name">
+      <h1>Victor Crest</h1>
+      <p class="age">26</p>
+    </div>
+    <p class="location">London</p>
+    <div class="line">
+      <hr>
+    </div>
+    <div class="stats">
+      <div class="followers">
+        <h2>80K</h2>
+        <p class="category">Followers</p>
+      </div>
+      <div class="likes">
+        <h2>803K</h2>
+        <p class="category">Likes</p>
+      </div>
+      <div class="photos">
+        <h2>1.4K</h2>
+        <p class="category">Photos</p>
+      </div>
+    </div>
+  </main>
 
 </body>
 </html>
